samples/_failures_safe/1761213467_93ab69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44ea643d.c: In function ‘main’:
./samples/SAFE/__tmp_44ea643d.c:161:12: error: missing terminating " character
  161 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_44ea643d.c:161:5: error: expected expression at end of input
  161 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_44ea643d.c:161:5: error: expected declaration or statement at end of input
